Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ $ rosrun explo_3d_node explo_sam(gp)_2d
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Tixiao Shan
-Jinkun Wang
+<p>Tixiao Shan;
+Jinkun Wang;
 Shi Bai(Bona)</p>
       </section>
       <footer>
