Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
 
 <p>S. Bai, J. Wang, K. Doherty, and B. Englot, "Inference-Enabled Information-Theoretic Exploration of Continuous Action Spaces,"Proceedings of the 17th International Symposium on Robotics Research, 16 pp., September 2015. </p>
 
+<p><img src="https://github.com/baishibona/Exploration_learning_enabled/blob/gh-pages/PierA_0524_3d.jpg" alt="Hoboken Pier A Park"></p>
+
 <ul>
-<li>Version  0.1</li>
+<li>Version  alpha</li>
 </ul>
 
 <h3>
