Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
 
 <p>S. Bai, J. Wang, K. Doherty, and B. Englot, "Inference-Enabled Information-Theoretic Exploration of Continuous Action Spaces,"Proceedings of the 17th International Symposium on Robotics Research, 16 pp., September 2015. </p>
 
-<p><img src="https://drive.google.com/open?id=0B8odAMUzINsoTXlTb1VpZ0czSjQ" alt="Hoboken Pier A Park"></p>
-
 <ul>
 <li>Version  alpha</li>
 </ul>
@@ -69,9 +67,9 @@ $ rosrun explo_3d_node explo_sam(gp)_2d
 <h3>
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h3>
 
-<p>Tixiao Shan;
-Jinkun Wang;
-Shi Bai(Bona)</p>
+<p>Shi Bai(Bona);
+Tixiao Shan;
+Jinkun Wang;</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/baishibona">baishibona</a></p>
